--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.0",
+        "barryvdh/laravel-snappy": "^1.0",
         "doctrine/dbal": "^4.1",
+        "knplabs/knp-snappy": "*",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9"
     },
